--- a/chat/room.html
+++ b/chat/room.html
@@ -198,9 +198,7 @@ $textarea
 				if (!lock || !document.getElementById(hash)) cont.scrollTop += div.offsetHeight + 3;
 			} else cont.appendChild(div);
 			if (data.event == 'add') {
-				if (username != data.user) {
-					audio.play();
-				}
+				if (username != data.user) audio.play();
 				if (onBottom) cont.scrollTop = cont.scrollHeight;
 			}
 			cont.onscroll();
