--- a/chat/room.html
+++ b/chat/room.html
@@ -578,7 +578,7 @@ $textarea
 		opacity: 0.3;
 		transition: opacity 60s;
 	}
-	.writing {
+	.writing, .writing a {
 		color: green;
 		font-weight: bold;
 	}
