--- a/chat/room.html
+++ b/chat/room.html
@@ -584,7 +584,10 @@ $textarea
 		opacity: 0.3;
 		transition: opacity 60s;
 	}
-	#users li { transition: color .2s }
+	#users li {
+		transition: color .2s;
+		list-style-type: none;
+	}
 	.writing, .writing a { color: green }
 	#users a { font-weight: normal }
 	#users:empty::after { content: 'No users in room' }
