Change background color of deleted chat message
The color was way too bright; this commit changes it into a less bright
red.

--- a/chat/room.html
+++ b/chat/room.html
@@ -607,7 +607,7 @@ $textarea
 		border-radius: 4px;
 	}
 	.editing { background: #4af }
-	.deleted { background: #f00 }
+	.deleted { background: #d93d3d }
 	#pingsug {
 		position: absolute;
 		margin-top: -18px;
