Shorten message del color into 3 digits

--- a/chat/room.html
+++ b/chat/room.html
@@ -607,7 +607,7 @@ $textarea
 		border-radius: 4px;
 	}
 	.editing { background: #4af }
-	.deleted { background: #d93d3d }
+	.deleted { background: #d44 }
 	#pingsug {
 		position: absolute;
 		margin-top: -18px;
