Add src for hat logo

--- a/a/head.html
+++ b/a/head.html
@@ -23,7 +23,7 @@
 		<div id="cont">
 			<nav id="nav">
 				<a id="logo" href="/" style="background: rgba(255, 255, 255, .9)">
-					<img src="/a/logo2.png" alt="DevDoodle" />
+					<img src="/a/logo2hat.png" alt="DevDoodle" />
 					<div></div>
 				</a>
 				<a href="/learn/">Learn</a>
