--- a/dev/canvas.html
+++ b/dev/canvas.html
@@ -1,7 +1,7 @@
 <section id="main">
 	<h1><span id="title">$title</span> <input type="text" id="edit-title" hidden="" value="$title" />  <small><a id="save">Save</a></small></h1>
 	<div id="row" class="row">
-		<textarea id="code">$code</textarea>
+		<textarea id="code" autofocus="">$code</textarea>
 		<iframe id="output" sandbox="allow-scripts"></iframe>
 	</div>
 </section>
@@ -200,15 +200,65 @@
 		up = document.getElementById('up'),
 		dn = document.getElementById('dn');
 	code.addEventListener('keypress', function(e) {
+		var oldSelectionStart = this.selectionStart;
 		if (e.keyCode === 13) {
-			var oldSelectionStart = this.selectionStart;
-			var tabs = this.value.substr(0, oldSelectionStart).split('\n')[this.value.substr(0, oldSelectionStart).split('\n').length - 1].split('\t').length - (('{([:'.indexOf(this.value[oldSelectionStart - 1]) + 1) ? 0 : 1);
+			if (this.value[oldSelectionStart - 1] == ',') this.eIndent = true;
+			var tabs = this.value.substr(0, oldSelectionStart)
+				.split('\n')[this.value.substr(0, oldSelectionStart).split('\n').length - 1]
+				.split('\t').length
+				- (
+					('{([:,'.indexOf(this.value[oldSelectionStart - 1]) + 1)
+					? 0
+					: (
+						this.value[oldSelectionStart - 1] == ';' &amp;&amp; this.eIndent
+						? (this.eIndent = false || 2) 
+						: 1
+					)
+				);
 			this.value = this.value.substr(0, this.selectionStart) + '\n' + '\t'.repeat(tabs) + this.value.substr(this.selectionStart);
 			this.selectionStart = ++oldSelectionStart + tabs;
 			this.selectionEnd = this.selectionStart;
 			e.preventDefault();
+		} else if (e.keyCode == 34) {
+			this.value = this.value.substr(0, this.selectionStart) + '""' + this.value.substr(this.selectionStart);
+			this.selectionEnd = ++oldSelectionStart;
+			e.preventDefault();
+		} else if (e.keyCode == 39) {
+			this.value = this.value.substr(0, this.selectionStart) + "''" + this.value.substr(this.selectionStart);
+			this.selectionEnd = ++oldSelectionStart;
+			e.preventDefault();
+		} else if (e.keyCode == 40) {
+			this.value = this.value.substr(0, this.selectionStart) + '()' + this.value.substr(this.selectionStart);
+			this.selectionEnd = ++oldSelectionStart;
+			e.preventDefault();
+		} else if (e.keyCode == 91) {
+			this.value = this.value.substr(0, this.selectionStart) + '[]' + this.value.substr(this.selectionStart);
+			this.selectionEnd = ++oldSelectionStart;
+			e.preventDefault();
+		} else if (e.keyCode == 123) {
+			this.value = this.value.substr(0, this.selectionStart) + '{}' + this.value.substr(this.selectionStart);
+			this.selectionEnd = ++oldSelectionStart;
+			e.preventDefault();
 		}
+		// console.log(e.keyCode);
 		run();
+	});
+	code.addEventListener('keydown', function(e) {
+		if (e.keyCode == 8 &amp;&amp; this.selectionStart == this.selectionEnd) {
+			console.log(this.value[this.selectionStart - 1] == '(')
+			if (
+				(this.value[this.selectionStart - 1] == '"' &amp;&amp; this.value[this.selectionStart] == '"') ||
+				(this.value[this.selectionStart - 1] == "'" &amp;&amp; this.value[this.selectionStart] == "'") ||
+				(this.value[this.selectionStart - 1] == '(' &amp;&amp; this.value[this.selectionStart] == ')') ||
+				(this.value[this.selectionStart - 1] == '[' &amp;&amp; this.value[this.selectionStart] == ']') ||
+				(this.value[this.selectionStart - 1] == '{' &amp;&amp; this.value[this.selectionStart] == '}')
+			) {
+				var oldSelectionStart = this.selectionStart;
+				this.value = this.value.substr(0, this.selectionStart - 1) + this.value.substr(this.selectionStart + 1);
+				this.selectionEnd = --oldSelectionStart;
+				e.preventDefault();
+			}
+		}
 	});
 	function createCode() {
 		return '&lt;!DOCTYPE html>&lt;html>&lt;head>&lt;title>Output frame&lt;/title>&lt;/head>&lt;style>*{margin:0;max-width:100%;box-sizing:border-box}body{background:#000;color:#fff}#canvas{border:1px solid #fff;-webkit-user-select:none;-moz-user-select:none;cursor:default}#console{height:100px;background:#111;overflow:auto;margin-top:8px}#console:empty{display:none}button{display:block}&lt;/style>&lt;body>&lt;canvas id="canvas">&lt;/canvas>&lt;div id="console">&lt;/div>&lt;button onclick="location.reload()">Restart&lt;/button>&lt;script src="/dev/canvas.js">&lt;/script>&lt;script>\'use strict\';try{this.eval(' + JSON.stringify(code.value) + ')}catch(e){error(e)}&lt;/script>&lt;/body>&lt;/html>';
