Removed 'required' from ask form

--- a/html/qa/ask.html
+++ b/html/qa/ask.html
@@ -16,8 +16,8 @@
 		<p>Remember to keep it as short and concise as possible while still accurately describing the problem.</p>
 	</aside>
 	<fieldset id="step0">
-		<h2><input type="text" name="title" placeholder="Title" id="title" autofocus="" class="fullwidth" required="" maxlength="144" /></h2>
-		<h2><input type="text" name="lang" placeholder="Language" id="lang" required="" /></h2>
+		<h2><input type="text" name="title" placeholder="Title" id="title" autofocus="" class="fullwidth" maxlength="144" /></h2>
+		<h2><input type="text" name="lang" placeholder="Language" id="lang" /></h2>
 		<div id="langsug" hidden="" class="abs"></div>
 		<button type="submit" id="submit1">Next</button>
 		<div id="err1" class="err"></div>
@@ -41,7 +41,7 @@
 	<fieldset id="step2" class="hidden">
 		<h2>Question Body</h2>
 		<textarea name="description" id="description" placeholder="Description"></textarea>
-		<h2><input type="text" name="question" id="question" placeholder="Core Question" class="fullwidth" required="" maxlength="144" /></h2>
+		<h2><input type="text" name="question" id="question" placeholder="Core Question" class="fullwidth" maxlength="144" /></h2>
 		<button type="submit" id="submit3">Next</button>
 		<div id="err3" class="err"></div>
 	</fieldset>
