--- a/html/chat/room.html
+++ b/html/chat/room.html
@@ -656,9 +656,9 @@ $textarea
 	}
 	#stars li { margin: 4px 0 }
 	#editform { margin: 0 }
-	.inactive {
+	#users li.inactive {
 		opacity: 0.3;
-		transition: opacity 60s;
+		transition: opacity 60s, color .2s;
 	}
 	#users li { transition: color .2s }
 	.writing, .writing a { color: green }
