Disallow program title edits UI where user != op

--- a/html/dev/html.html
+++ b/html/dev/html.html
@@ -311,31 +311,33 @@
 			e.classList.remove('progress');
 		}, 'html=' + encodeURIComponent(htmle.value) + '&amp;css=' + encodeURIComponent(css.value) + '&amp;js=' + encodeURIComponent(js.value));
 	};
-	document.getElementById('title').onclick = function() {
-		this.hidden = true;
-		var edit = document.getElementById('edit-title');
-		edit.hidden = false;
-		edit.focus();
-	};
-	document.getElementById('edit-title').onblur = function() {
-		request('/api/program/edit-title', function(res) {
-			var edit = document.getElementById('edit-title');
-			if (res.indexOf('Error') == 0) {
-				alert(res);
-				edit.value = document.getElementById('title').textContent;
-			} else if (res == 'Success') {
-				edit.hidden = true;
-				var title = document.getElementById('title');
-				title.textContent = edit.value.substr(0, 92) || 'Untitled';
-				if (!edit.value) edit.value = 'Untitled';
-				title.hidden = false;
-			} else alert('Unknown error. Response was: ' + res);
-		}, 'title=' + encodeURIComponent(this.value));
-	};
-	document.getElementById('edit-title').onkeypress = function(e) {
-		if (e.keyCode == 13) this.onblur.call(this);
-	};
 	if (document.getElementById('meta')) {
+		if ($mine) {
+			document.getElementById('title').onclick = function() {
+				this.hidden = true;
+				var edit = document.getElementById('edit-title');
+				edit.hidden = false;
+				edit.focus();
+			};
+			document.getElementById('edit-title').onblur = function() {
+				request('/api/program/edit-title', function(res) {
+					var edit = document.getElementById('edit-title');
+					if (res.indexOf('Error') == 0) {
+						alert(res);
+						edit.value = document.getElementById('title').textContent;
+					} else if (res == 'Success') {
+						edit.hidden = true;
+						var title = document.getElementById('title');
+						title.textContent = edit.value.substr(0, 92) || 'Untitled';
+						if (!edit.value) edit.value = 'Untitled';
+						title.hidden = false;
+					} else alert('Unknown error. Response was: ' + res);
+				}, 'title=' + encodeURIComponent(this.value));
+			};
+			document.getElementById('edit-title').onkeypress = function(e) {
+				if (e.keyCode == 13) this.onblur.call(this);
+			};
+		}
 		up.onclick = function() {
 			request('/api/program/vote', function(res) {
 				if (res.indexOf('Error') == 0) alert(res);
